Fix album view thumbs not rendering and description alignment

--- a/src/assets/album.css
+++ b/src/assets/album.css
@@ -39,7 +39,7 @@
 .album-text {
     padding: 0px;
     margin: 0px;
-    text-align: center;
+    text-align: left;
 
     font-family: 'Ubuntu';
     font-style: normal;
@@ -54,6 +54,7 @@
 .album-subheader {
     font-weight: 700;
     font-size: 16px;
+    width: 50%;
     font-size: clamp(10px, 3.75vw + 0.1rem, 16px);
 }
 
